app-tier-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wpdemo
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: wpdemo
    tier: frontend
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wpdemo
spec:
  selector:
    matchLabels:
      app: wpdemo
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wpdemo
        tier: frontend
    spec:
      containers:
      - name: wordpress
        image: wordpress:4.7-apache
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /bitnami/wordpress
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
