db-tier-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: wpdemo
spec:
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  selector:
    app: wpdemo
    tier: database
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: wpdemo
spec:
  selector:
    matchLabels:
      app: wpdemo
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wpdemo
        tier: database
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
