nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:  
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: wpdemo
spec:  
  rules:
  - host: minikube.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: wordpress
              port:
                number: 80
